# bad-apple-pdf

./: .gitignore  LICENSE  README.md  pyproject.toml
src/bad_apple_pdf/: main.py
